# PAPI

./: .gitignore  PAPI复现思路.md  README.md  dolly.csv  main.py  output.csv  output_papi.csv  ramulator_attn.out  ramulator_fc.out
ramulator2/: papi_attn.yaml  papi_fc.yaml  ramulator
ramulator2/log/papi_attn/: cmd.log.ch0  cmd.log.ch1  cmd.log.ch10  cmd.log.ch11  cmd.log.ch12  cmd.log.ch13  cmd.log.ch14  cmd.log.ch15  cmd.log.ch2  cmd.log.ch3  cmd.log.ch4  cmd.log.ch5  cmd.log.ch6  cmd.log.ch7  cmd.log.ch8  cmd.log.ch9
ramulator2/log/papi_fc/: cmd.log.ch0  cmd.log.ch1  cmd.log.ch10  cmd.log.ch11  cmd.log.ch12  cmd.log.ch13  cmd.log.ch14  cmd.log.ch15  cmd.log.ch2  cmd.log.ch3  cmd.log.ch4  cmd.log.ch5  cmd.log.ch6  cmd.log.ch7  cmd.log.ch8  cmd.log.ch9
ramulator2/src/addr_mapper/: CMakeLists.txt
ramulator2/src/addr_mapper/impl/: attn_pim_linear_mappers.cpp  fc_pim_linear_mappers.cpp
ramulator2/src/base/: request.h
ramulator2/src/dram/: CMakeLists.txt
ramulator2/src/dram_controller/: CMakeLists.txt
ramulator2/src/frontend/: CMakeLists.txt
ramulator2/src/frontend/impl/memory_trace/: attnpim_loadstore_trace.cpp  fcpim_loadstore_trace.cpp
ramulator2/src/memory_system/: CMakeLists.txt
ramulator2/src/memory_system/impl/: AttnPIM_DRAM_system.cpp  FCPIM_DRAM_system.cpp
ramulator2/trace_gen/: gen_trace_attacc_bank.py  gen_trace_papi_attn.py  gen_trace_papi_fc.py  papi_attn.trace  papi_attn2.trace  papi_attn3.trace  papi_fc.trace
src/: config.py  devices.py  dolly.py  model.py  ramulator_wrapper.py  system.py  system2.py  type.py
(+6 files in other folders)
